# woco-inkoopplatform-backend

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/: auth.py  calendar.py  categories.py  categorization.py  contracts.py  dashboard.py  deps.py  export.py  imports.py  invitations.py  members.py  organizations.py  risk.py  settings.py  spend.py  supplier_master.py  suppliers.py  team.py
app/models/: __init__.py  app_setting.py  category.py  category_duration_setting.py  contract.py  import_session.py  invitation.py  organization.py  procurement_calendar_item.py  procurement_calendar_phase.py  risk_assessment.py  supplier.py  supplier_categorization.py  supplier_master_category.py  supplier_yearly_spend.py  threshold.py  transaction.py  user.py  user_organization.py
app/schemas/: __init__.py  category.py  contract.py  import_schemas.py  organization.py  risk.py  supplier.py  transaction.py  user.py
app/services/: calendar_service.py  categorization_service.py  color_extraction_service.py  export_service.py  import_service.py  pdf_service.py  recommendation_service.py  risk_service.py  seed_service.py  supplier_master_service.py
data/: woco_inkoopplatform.db
data/categories/: aedes_categories.json  bu_woco_categories.json
