[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woco-inkoopplatform-backend"
version = "0.1.0"
description = "WoCo Inkoopplatform - Spendanalyse & Inkoopkalender API voor woningcorporaties"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "slowapi>=0.1.9",
    "rapidfuzz>=3.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
